erDiagram
    USERS ||--o{ CAMPAIGNS : owns
    USERS ||--o{ VIDEOS : owns
    USERS ||--o{ REDIRECT_PAGES : owns
    USERS ||--o{ PAGES : owns
    CAMPAIGNS ||--o{ RESULTS : has
    CAMPAIGNS ||--o{ EVENTS : has
    CAMPAIGNS }o--|| PAGES : page
    CAMPAIGNS }o--|| TEMPLATES : template
    CAMPAIGNS }o--|| SMTP : smtp
    RESULTS ||--o{ VIDEO_PROGRESSES : tracks
    VIDEOS ||--o{ VIDEO_PROGRESSES : watched
    PAGES }o--o| VIDEOS : embeds
    REDIRECT_PAGES }o--o| VIDEOS : embeds
    TEMPLATES ||--o{ ATTACHMENTS : has
    CAMPAIGNS ||--o{ CAMPAIGN_SHARES : "공유(읽기전용)"
    USERS ||--o{ CAMPAIGN_SHARES : "피공유 viewer"
    USERS ||--|| USER_PREFERENCES : has
